--- a/src/style.css
+++ b/src/style.css
@@ -21,3 +21,4 @@
 @import './css/longread/navbar.css';
 @import './css/longread/intro.css';
 @import './css/longread/summary.css';
+@import './css/longread/author.css';
