--- a/src/css/longread/navbar.css
+++ b/src/css/longread/navbar.css
@@ -1,13 +1,55 @@
 .menu--longread {
   height: 100%;
-  width: 100%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   position: fixed;
   justify-content: center;
   margin-left: 5rem;
 
-  @media (--only-medium-screen) {
+  & li {
+    display: flex;
+    padding: .5rem 0;
+    font-family: var(--fontTitleLongread);
+    font-size: .9rem;
+  }
+
+  & li:first-child::before {
+    content: '';
+    border: 1px solid white;
+    background-color: black;
+    border-radius: 50%;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    z-index: 0;
+    left: -38px;
+    transform: translateY(6px);
+  }
+
+  & li::after {
+    content: '';
+    background-color: white;
+    border-radius: 50%;
+    height: 6px;
+    width: 6px;
+    position: absolute;
+    z-index: 0;
+    left: -35px;
+    transform: translateY(.6rem);
+  }
+
+  & ul::before {
+    content: '';
+    position: absolute;
+    background-color: white;
+    width: 1px;
+    height: 9.4rem;
+    top: calc(50% - 4.5rem);
+    left: -2rem;
+  }
+
+  @media (width < 1380px) {
     display: none;
   }
 }
