--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,5 @@
 @import './css/longread/intro.css';
 @import './css/longread/summary.css';
 @import './css/longread/author.css';
+@import './css/longread/history.css';
+@import './css/longread/present.css';
