--- a/src/style.css
+++ b/src/style.css
@@ -24,3 +24,4 @@
 @import './css/longread/author.css';
 @import './css/longread/history.css';
 @import './css/longread/present.css';
+@import './css/longread/end.css';
