--- a/src/css/longread/end.css
+++ b/src/css/longread/end.css
@@ -11,17 +11,12 @@
     z-index: -1;
     content: '';
     position: absolute;
-    background-image:
-      /*url(../../assets/img/longread/lucifer.png),*/
-      url(../../assets/img/longread/end_1016x732.png);
+    background-image: url(../../assets/img/longread/end_1016x732.png);
     background-repeat: no-repeat;
-    background-position:
-     /* 30% 0%,*/
-      58% 100%;
+    background-position: 58% 100%;
 
     /* Image size */
-    background-size:
-      auto 700px;
+    background-size: auto 700px;
 
     /* Canvas size */
     width: 100vw;
@@ -51,19 +46,47 @@
   margin-top: 10rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
+  grid-gap: 6rem 2rem;
   position: relative;
 
   @media (--only-small-screen) {
     grid-template-columns: repeat(2, 1fr);
   }
 
+  @media (width < 500px) {
+    margin-top: 7rem;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   & li {
-    /* max-width: 15rem; */
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      background-image: url(../../assets/img/longread/unlocked.svg);
+      height: 1.7rem;
+      width: 1.7rem;
+      left: 50%;
+      top: -.5rem;
+      transform: translate(-50%, -100%);
+    }
+  }
+
+  & .locked {
+    opacity: .2;
+
+    & .subtitle {
+      color: #6a6a6a;
+    }
+
+    &::before {
+      background-image: url(../../assets/img/longread/locked.svg);
+    }
   }
 
   &::before {
-    background-image: url(../../assets/img/longread/rechthoek_1180x500.png);
+    background-image: url(../../assets/img/longread/end_bg_1180x500.png);
     z-index: -1;
     content: '';
     position: absolute;
@@ -75,18 +98,19 @@
     background-size: cover;
 
     /* Canvas size */
-    /* DEEL 1 t.e.m. -6rem berekend puur de container width (zonder margin -2rem) */
-    /* DEEL 2 14rem is de extra padding */
-
-    width: calc(100vw - var(--container) + 6rem);
-    top: -5rem;
+    /* 100vw - (var(--container) * 2) - 6rem */
+    width: calc(100vw - var(--container) + 3rem);
+    top: -6.5rem;
     left: -6rem;
-    height: 146%;
+    height: calc(100% + 11.7rem);
 
     @media (--only-medium-screen) {
       width: 100vw;
-      left: calc(var(--container) - 4rem);
-      /* left: -5rem; */
+      left: -3rem;
+    }
+
+    @media (--only-extrasmall-screen) {
+      left: -1rem;
     }
   }
 }
