Validatie fouten eruit gehaald

--- a/src/css/components/cart.css
+++ b/src/css/components/cart.css
@@ -198,6 +198,10 @@
     align-items: center;
   }
 
+  & .quantity__wrapper {
+    flex-direction: row;
+  }
+
   & p {
     margin-bottom: 0;
   }
