--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,7 +16,6 @@ html {
 
 body {
   min-height: 100vh;
-  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -40,10 +39,10 @@ a {
 }
 
 main {
-  margin-bottom: 7rem;
+  margin-bottom: 2rem;
 
   @media (--only-medium-screen) {
-    margin-bottom: 3rem;
+    margin-bottom: 0;
   }
 }
 
@@ -70,4 +69,8 @@ button:hover {
 
 footer {
   margin-top: var(--spacerBig);
+}
+
+.highlight {
+  border-bottom: 2px solid var(--colorLongread);
 }
