--- a/src/css/longread/author.css
+++ b/src/css/longread/author.css
@@ -1,3 +1,15 @@
+.line--author {
+  width: 35vw;
+  position: relative;
+  z-index: 2;
+  top: 6rem;
+  left: 0;
+
+  @media (--only-medium-screen) {
+    display: none;
+  }
+}
+
 .author__quote {
   max-width: 22rem;
   margin: 6rem auto 7rem;
@@ -74,6 +86,7 @@
 
 .author__image {
   height: 100%;
+  z-index: 3;
   transform: translateX(-10rem);
 
   @media (--only-small-screen) {
@@ -100,7 +113,7 @@
   }
 }
 
-.line--author {
+/* .line--author {
   position: relative;
 
   &::before {
@@ -108,10 +121,8 @@
     background-image: url(../../assets/img/longread/line_auteur.svg);
     background-repeat: no-repeat;
 
-    /* Lijn zelf */
     background-size: 100% auto;
 
-    /* Grote van canvas */
     width: calc(50vw - 15rem);
     height: calc(50vw - 15rem);
 
@@ -144,4 +155,4 @@
       bottom: 35rem;
     }
   }
-}
+} */
