--- a/src/css/longread/base.css
+++ b/src/css/longread/base.css
@@ -8,10 +8,6 @@
 
   & p {
     line-height: 1.75;
-
-    /* @media (--only-extrasmall-screen) {
-      font-size: 1rem;
-    } */
   }
 
 }
@@ -23,9 +19,7 @@
 }
 
 .container--small {
-  /* container op die manier opbouwen, zo blijft container full width en kunnen img nog
-  responsive gepositioneerd worden, maximum width is 60rem adhv padding */
-  padding: 0 var(--container); /* 60 rem = container width + margin */
+  padding: 0 var(--container);
   margin: 0 3rem;
 
   @media (--only-extrasmall-screen) {
@@ -59,4 +53,14 @@
   font-size: 2.5rem;
   margin-bottom: .8rem;
   font-weight: normal;
+}
+
+.line {
+  position: absolute;
+  z-index: -1;
+  /* right: 0; */
+}
+
+.line__wrapper {
+  position: absolute;
 }
