--- a/src/css/longread/history.css
+++ b/src/css/longread/history.css
@@ -1,6 +1,25 @@
-.timeline {
-  /* padding: 0 calc((100vw - 80rem) / 2); */
+.line__wrapper--history {
   position: relative;
+  width: 100vw;
+  height: 25rem;
+  overflow: hidden;
+
+  @media (--only-medium-screen) {
+    display: none;
+  }
+}
+
+.line--history {
+  z-index: 2;
+  width: 2100px;
+  height: auto;
+  left: 50%;
+  transform: translate(-50%, 33%);
+}
+
+.timeline {
+  position: relative;
+  margin-top: -25rem;
 
   @media (--only-medium-screen) {
     display: none;
@@ -12,24 +31,6 @@
     text-align: center;
     justify-content: space-between;
     margin: 7rem auto;
-  }
-
-  &::after {
-    content: '';
-    background-image: url(../../assets/img/longread/line_tijdlijn.svg);
-    background-repeat: no-repeat;
-    position: absolute;
-
-    /* Lijn zelf, fixed width van 2000px */
-    background-size: 2000px auto;
-    background-position: 50% 50%;
-
-    /* Grote van canvas */
-    width: 100vw;
-    height: 100%;
-
-    top: 10rem;
-    z-index: -1;
   }
 }
 
@@ -61,15 +62,15 @@
   }
 
   &:nth-of-type(2) {
-    transform: translateY(4.2rem);
+    transform: translateY(4rem);
   }
 
   &:nth-of-type(3) {
-    transform: translateY(.1rem);
+    transform: translateY(-.2rem);
   }
 
   &:nth-of-type(4) {
-    transform: translateY(-.5rem);
+    transform: translateY(-1rem);
   }
 }
 
@@ -139,51 +140,147 @@
   margin-top: 8rem;
   height: 650px;
 
+  @media (width < 820px) {
+    height: 570px;
+  }
+
+  @media (--only-extrasmall-screen) {
+    height: 400px;
+  }
+
+  @media (width < 500px) {
+    margin-top: 4rem;
+    height: 444px;
+  }
+
   &::before {
     z-index: 1;
     content: '';
     position: absolute;
-    background-image:
-      url(../../assets/img/longread/bookburning_765x650.png),
-      url(../../assets/img/longread/bookburning_quote_300x313.png),
-      url(../../assets/img/longread/bookburning_books_620x657.png),
-      url(../../assets/img/longread/bookburning_bg_1380x490.jpg);
-    background-repeat: no-repeat;
-    background-position:
-      30% 80%,
-      54% 37%,
-      95% 50%,
-      0% 100%;
+    animation: MoveBooksBig 3s linear infinite;
 
-    /* Image size */
+    background-image:
+      url(../../assets/img/longread/bookburning_800x650.png),
+      url(../../assets/img/longread/bookburning_book1_455x353.png),
+      url(../../assets/img/longread/bookburning_book2_351x292.png),
+      url(../../assets/img/longread/bookburning_book3_160x234.png),
+      url(../../assets/img/longread/bookburning_bg_1380x490.jpg);
+
+    background-repeat: no-repeat;
+
     background-size:
       auto 650px,
-      auto 313px,
-      auto 530px,
+      auto 290px,
+      auto 230px,
+      auto 200px,
       1380px 490px;
 
-    /* Canvas size */
     width: 100vw;
     height: 650px;
+
+    @media (width < 1600px) {
+      animation: MoveBooksSmall 3s linear infinite;
+      background-position:
+        15% 80%,
+        90% 15%,
+        95% 53%,
+        83% 80%,
+        0% 100%;
+
+      background-size:
+        auto 650px,
+        auto 230px,
+        auto 180px,
+        auto 150px,
+        1380px 490px;
+    }
+
+    @media (--only-medium-screen) {
+      background-image:
+        url(../../assets/img/longread/bookburning_800x650.png),
+        url(../../assets/img/longread/bookburning_bg_1380x490.jpg);
+
+      background-position:
+        0% 80%,
+        100% 100%;
+
+      background-size:
+        auto 620px,
+        1380px 490px;
+    }
+
+    @media (width < 820px) {
+      background-image: url(../../assets/img/longread/bookburning_960x726.jpg);
+      background-position: bottom left;
+      height: 570px;
+      background-size: cover;
+    }
+
+    @media (--only-extrasmall-screen) {
+      height: 400px;
+      width: 100%;
+    }
+
+    @media (width < 500px) {
+      background-image: url(../../assets/img/longread/bookburning_500x444.jpg);
+      height: 444px;
+    }
   }
 }
 
-.line--bookburning {
+.line__wrapper--bookburning {
   position: relative;
+}
 
-  &::before {
-    content: '';
-    background-image: url(../../assets/img/longread/line_bookburning.svg);
-    background-repeat: no-repeat;
-    /* Lijn zelf */
-    background-size: auto 70px;
-    background-position: 30% 0%;
-    left: -26rem;
-    /* Grote van canvas */
-    width: 100vw;
-    height: 650px;
-    position: absolute;
-    top: 0;
-    z-index: -1;
+.line--bookburning {
+  position: absolute;
+  width: 21vw;
+  top: 10%;
+  height: auto;
+
+  @media (width < 1600px) {
+    display: none;
+  }
+}
+
+@keyframes MoveBooksBig {
+
+  0%, 100% {
+    background-position:
+      30% 80%,
+      85% 15%,
+      95% 65%,
+      75% 85%,
+      0% 100%;
+  }
+
+  50% {
+    background-position:
+      30% 80%,
+      85% 12%,
+      95% 68%,
+      75% 82%,
+      0% 100%;
+  }
+}
+
+@keyframes MoveBooksSmall {
+
+  0%, 100% {
+    background-position:
+      15% 80%,
+      90% 15%,
+      95% 53%,
+      83% 80%,
+      0% 100%;
+  }
+
+  50% {
+    background-position:
+      15% 80%,
+      90% 17%,
+      95% 50%,
+      83% 82%,
+      0% 100%;
   }
 }
