--- a/src/css/components/webshop.css
+++ b/src/css/components/webshop.css
@@ -1,8 +1,8 @@
 .webshop__items {
-  margin-top: var(--spacerBig);
+  margin-top: 3rem;
   display: grid;
   grid-template: auto / repeat(4, 1fr);
-  grid-gap: var(--spacerBig);
+  grid-gap: 3rem;
 
   @media (--only-medium-screen) {
     grid-template: auto / repeat(3, 1fr);
@@ -50,6 +50,8 @@
   }
 
   & .item__info {
+    font-size: .9rem;
+    opacity: .5;
     order: 4;
   }
 }
